--- a/backend/.env
+++ b/backend/.env
@@ -7,5 +7,6 @@ JWT_SECRET=kuntartib_super_secret_key_2024
 # Server Port
 PORT=5000
 
-# Frontend URL (CORS uchun)
+# OpenAI API kaliti (AI yordamchi uchun)
+OPENAI_API_KEY=sk-ochiq-demo-key
 CLIENT_URL=http://localhost:5173
