--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mui/material": "^7.3.6",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
+    "express-validator": "^7.3.1",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
