AI integratsiyasi hujjati, backend va .env yangilandi

--- a/backend/.env
+++ b/backend/.env
@@ -8,5 +8,5 @@ JWT_SECRET=kuntartib_super_secret_key_2024
 PORT=5000
 
 # OpenAI API kaliti (AI yordamchi uchun)
-OPENAI_API_KEY=sk-ochiq-demo-key
+OPENAI_API_KEY=sk-... (o‘zingizning haqiqiy kalitingiz)
 CLIENT_URL=http://localhost:5173
