--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "bcryptjs": "^2.4.3",
